Updates to configuration so builds work

--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,6 @@
 skipsdist = True
 [testenv]
 usedevelop = True
-deps=
--r{toxinidir}/test/requirements.txt
-commands =
-python -c 'import py.test; raise SystemExit(py.test.main())'
+deps = -r{toxinidir}/test/requirements.txt
+commands = python -c 'import py.test; raise SystemExit(py.test.main())'
 
