--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ python:
     - "2.7"
 
 install: ["pip install py3compat pytest-cov mock"]
-script: "py.test --cov daisy tests/"
+script: "py.test --cov daisy test"
 sudo: false
