--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ python:
     - "2.7"
 
 install: ["pip install py3compat pytest-cov mock"]
-script: "py.test --cov daisy test"
+script: "py.test --cov daisychain test"
 sudo: false
